--- a/microsoftHomePage/index.html
+++ b/microsoftHomePage/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 </head>
 <body>
+    <!-- Credits: TraversaryMedia -->
+    <div class="menu-btn">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
+
     <div class="container">
         <!-- Nav -->
         <nav class="main-nav">
             <img src="img/logo.png" alt="Microsoft" class="logo">
-            <ul class="main-menu">
+            <ul class="main-menu show">
                 <li><a href="#">Office</a></li>
                 <li><a href="#">Windows</a></li>
                 <li><a href="#">Surface</a></li>
@@ -212,7 +217,7 @@
     </section>
 
     <!-- Footer -->
-    <div class="footer">
+    <footer class="footer">
         <div class="footer-inner">
             <div><i class="fas fa-globe fa-2x"></i>English (United States)</div>
             <ul>
@@ -226,6 +231,10 @@
                 <li><a href="#">&copy; Microsoft 2020</a></li>
               </ul>
         </div>
-    </div>
+    </footer>
+
+    <script>
+        document.querySelector('.menu-btn').addEventListener('click',() => document.querySelector('.main-menu').classList.toggle('show'));
+    </script>
 </body>
 </html>
